Three tests are working

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,5 +1,5 @@
-status = info
-rootLogger.level = info
+status = debug
+rootLogger.level = debug
 property.filepath = ./src/main/resources/
 property.filename = logs.log
 appenders = file, console
@@ -9,7 +9,7 @@ appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern =%d{yyyy-MM-dd HH:mm:ss} %-5p - %m%n
 appender.console.filter.threshold.type = ThresholdFilter
-appender.console.filter.threshold.level = info
+appender.console.filter.threshold.level = debug
 
 appender.file.type = RollingFile
 appender.file.name = File
@@ -22,7 +22,7 @@ appender.file.policies.type = Policies
 appender.file.policies.size.type = SizeBasedTriggeringPolicy
 appender.file.policies.size.size=1MB
 appender.file.filter.threshold.type = ThresholdFilter
-appender.file.filter.threshold.level = info
+appender.file.filter.threshold.level = debug
 
 rootLogger.appenderRefs = file, console
 rootLogger.appenderRef.console.ref = STDOUT
